--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@types/node": "^20.12.13",
         "axios": "^1.6.4",
         "laravel-echo": "^1.16.1",
         "laravel-vite-plugin": "^1.0",
