--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "kalel1500/laravel-hexagonal-and-ddd-architecture-utilities": "^1.1",
         "laravel/framework": "^11.9",
         "laravel/reverb": "@beta",
         "laravel/tinker": "^2.9"
@@ -21,6 +22,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Src\\": "src/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
