--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "laravel-echo": "^1.16.1",
         "laravel-vite-plugin": "^1.0",
         "pusher-js": "^8.4.0-rc2",
+        "sass": "^1.77.4",
         "typescript": "^5.4.5",
         "vite": "^5.0"
     },
