Guardar datos .env en .env.local

--- a/.env.local
+++ b/.env.local
@@ -1,9 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:W5SwkVCyn8RENrMY0txGbSqTjVSZ26WIGn9vGU7mLyA=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://localhost/template
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -32,7 +32,7 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+BROADCAST_CONNECTION=reverb
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
@@ -61,4 +61,17 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+REVERB_APP_ID=819763
+REVERB_APP_KEY=exzxdbvxezm6izwgptc5
+REVERB_APP_SECRET=xg9icx9am66wze8zxj2f
+REVERB_HOST="localhost"
+REVERB_PORT=8080
+REVERB_SCHEME=http
+
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
+
 VITE_APP_NAME="${APP_NAME}"
+VITE_APP_ENV="${APP_ENV}"
