--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "build-check": "tsc && vite build"
     },
     "devDependencies": {
         "@types/bootstrap": "^5.2.10",
