--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     "license": "GPL-3.0-or-later",
     "require": {
         "php": "^8.2",
-        "kalel1500/laravel-hexagonal-and-ddd-architecture-utilities": "^5.0",
+        "kalel1500/laravel-hexagonal-and-ddd-architecture-utilities": "@beta",
         "laravel/framework": "^11.9",
-        "laravel/reverb": "@beta",
+        "laravel/reverb": "^1.3",
         "laravel/tinker": "^2.9",
         "tightenco/ziggy": "^2.2"
     },
