mejorarPlantilla07: actualizar .env.local (quitar reverb + añadir vite)

--- a/.env.local
+++ b/.env.local
@@ -10,7 +10,7 @@ APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-APP_MAINTENANCE_STORE=database
+# APP_MAINTENANCE_STORE=database
 
 BCRYPT_ROUNDS=12
 
@@ -32,7 +32,7 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=reverb
+BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
@@ -61,17 +61,7 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-REVERB_APP_ID=819763
-REVERB_APP_KEY=exzxdbvxezm6izwgptc5
-REVERB_APP_SECRET=xg9icx9am66wze8zxj2f
-REVERB_HOST="localhost"
-REVERB_PORT=8080
-REVERB_SCHEME=http
-
-VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
-VITE_REVERB_HOST="${REVERB_HOST}"
-VITE_REVERB_PORT="${REVERB_PORT}"
-VITE_REVERB_SCHEME="${REVERB_SCHEME}"
-
-VITE_APP_NAME="${APP_NAME}"
 VITE_APP_ENV="${APP_ENV}"
+VITE_APP_NAME="${APP_NAME}"
+VITE_APP_CODE="laravel"
+VITE_USE_APPNAME_IN_SOURCE_PATH=false
