--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "engines": {
         "node": "^20.11.1",
         "npm": "^10.5.0"
+    },
+    "dependencies": {
+        "laravel-ts-utilities": "^1.2.0-beta.3"
     }
 }
