--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
     "keywords": ["laravel", "framework"],
-    "license": "GPL-3.0-or-later",
+    "license": "MIT",
     "require": {
         "php": "^8.2",
         "kalel1500/laravel-hexagonal-and-ddd-architecture-utilities": "@beta",
