--- a/.env.local
+++ b/.env.local
@@ -64,5 +64,7 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_ENV="${APP_ENV}"
 VITE_APP_NAME="${APP_NAME}"
 VITE_APP_CODE="laravel"
-VITE_USE_APPNAME_IN_SOURCE_PATH=false
+VITE_CONF_MINIFY=false
+VITE_CONF_SOURCEMAP=true
+VITE_CONF_USE_APPCODE_IN_SOURCE_PATH=false
 #VITE_BROADCASTING_ENABLED=true
