variable APP_URL actualizada

--- a/.env.local
+++ b/.env.local
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:W5SwkVCyn8RENrMY0txGbSqTjVSZ26WIGn9vGU7mLyA=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost/template
+APP_URL=https://starter-template.local.es
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
