--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "kalel1500/laravel-hexagonal-and-ddd-architecture-utilities": "@beta",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9"
     },
