--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     },
     "devDependencies": {
         "@types/node": "^22.5.5",
+        "autoprefixer": "^10.4.20",
         "laravel-vite-plugin": "^1.0",
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.13",
         "typescript": "^5.6.2",
         "vite": "^5.0"
     },
