estructuraBlades80: darkAndSidebar -> nueva lógica para invalidar el localStorage (nueva variable env VITE_APP_STORAGE_VERSION)

--- a/.env.local
+++ b/.env.local
@@ -64,6 +64,7 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_ENV="${APP_ENV}"
 VITE_APP_NAME="${APP_NAME}"
 VITE_APP_CODE="laravel"
+VITE_APP_STORAGE_VERSION="0.1"
 VITE_CONF_MINIFY=false
 VITE_CONF_SOURCEMAP=true
 VITE_CONF_USE_APPCODE_IN_SOURCE_PATH=false
