--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "devDependencies": {
         "@types/node": "^22.5.5",
         "autoprefixer": "^10.4.20",
+        "axios": "^1.7.4",
+        "concurrently": "^9.0.1",
         "flowbite": "^2.5.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
