--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "kalel1500/laravel-hexagonal-and-ddd-architecture-utilities": "@beta",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9",
-        "tightenco/ziggy": "^2.3"
+        "laravel/tinker": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -23,7 +21,6 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Src\\": "src/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
