--- a/package.json
+++ b/package.json
@@ -3,29 +3,15 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite",
-        "build-check": "tsc && vite build"
+        "dev": "vite"
     },
     "devDependencies": {
-        "@types/node": "^22.5.5",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
-        "flowbite": "^2.5.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
-        "prettier": "^3.3.3",
-        "prettier-plugin-blade": "^2.1.19",
-        "prettier-plugin-tailwindcss": "^0.6.8",
         "tailwindcss": "^3.4.13",
-        "typescript": "^5.6.2",
         "vite": "^5.0"
-    },
-    "engines": {
-        "node": "^20.11.1",
-        "npm": "^10.5.0"
-    },
-    "dependencies": {
-        "laravel-ts-utilities": "^1.3.0-beta.1"
     }
 }
